--- a/application/modules/relatorio/views/scripts/index/fiotec-generated.jrxml
+++ b/application/modules/relatorio/views/scripts/index/fiotec-generated.jrxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.4.0.final using JasperReports Library version 6.3.1  -->
+<!-- Created with Jaspersoft Studio version 6.4.0.final using JasperReports Library version 6.4.1  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="geral" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isTitleNewPage="true" uuid="e69bc383-12d4-4901-8503-507569fba44c">
 	<property name="ireport.zoom" value="1.3310000000000013"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="1545"/>
+	<property name="net.sf.jasperreports.print.create.bookmarks" value="true"/>
 	<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 	<style name="Title" fontName="PT Sans" fontSize="50" isBold="true"/>
 	<style name="SubTitle" forecolor="#736343" fontName="PT Sans" fontSize="18"/>
@@ -170,7 +171,7 @@ GROUP BY
 		SELECT n3.*, p4.id AS p4_id, p4.singular as p4_singular, p4.has_responsavel as p4_has_responsavel, p4.has_supervisor as p4_has_supervisor, p4.has_equipe as p4_has_equipe, p4.menu as p4_menu, p4.descricao as p4_descricao, p4.ordem as p4_ordem, p4.programacao_id as p4_programacao_id, p4.equipe as p4_equipe, p4.responsavel as p4_responsavel, p4.supervisor as p4_supervisor, p4.instrumento_id as p4_instrumento_id
 	        FROM    vw_report_base p4 RIGHT JOIN n3 on p4.programacao_id=n3.p3_id),
 	n5 as (
-		SELECT n4.*, p5.id AS __detail_id, p5.singular as __detail_singular, p5.has_responsavel as __detail_has_responsavel, p5.has_supervisor as __detail_has_supervisor, p5.has_equipe as __detail_has_equipe, p5.menu as __detail_menu, p5.descricao as __detail_descricao, p5.ordem as __detail_ordem, p5.programacao_id as __detail_programacao_id, p5.equipe as __detail_equipe, p5.responsavel as __detail_responsavel, p5.supervisor as __detail_supervisor, p5.instrumento_id as __detail_instrumento_id
+		SELECT n4.*, p5.id AS p5_id, p5.singular as p5_singular, p5.has_responsavel as p5_has_responsavel, p5.has_supervisor as p5_has_supervisor, p5.has_equipe as p5_has_equipe, p5.menu as p5_menu, p5.descricao as p5_descricao, p5.ordem as p5_ordem, p5.programacao_id as p5_programacao_id, p5.equipe as p5_equipe, p5.responsavel as p5_responsavel, p5.supervisor as p5_supervisor, p5.instrumento_id as p5_instrumento_id
 	        FROM    vw_report_base p5 RIGHT JOIN n4 on p5.programacao_id=n4.p4_id)		        
 SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 	</queryString>
@@ -187,21 +188,21 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 	<field name="p1_responsavel" class="java.lang.String"/>
 	<field name="p1_supervisor" class="java.lang.String"/>
 	<field name="p1_instrumento_id" class="java.lang.Integer"/>
-	<field name="__detail_id" class="java.lang.Integer"/>
-	<field name="__detail_singular" class="java.lang.String"/>
-	<field name="__detail_has_responsavel" class="java.lang.Boolean"/>
-	<field name="__detail_has_supervisor" class="java.lang.Boolean"/>
-	<field name="__detail_has_equipe" class="java.lang.Boolean"/>
-	<field name="__detail_menu" class="java.lang.String"/>
-	<field name="__detail_descricao" class="java.lang.String"/>
-	<field name="__detail_ordem" class="java.lang.Integer"/>
-	<field name="__detail_programacao_id" class="java.lang.Integer"/>
-	<field name="__detail_equipe" class="java.lang.String"/>
-	<field name="__detail_responsavel" class="java.lang.String"/>
-	<field name="__detail_supervisor" class="java.lang.String"/>
-	<field name="__detail_responsavel_id" class="java.lang.Integer"/>
-	<field name="__detail_supervisor_id" class="java.lang.Integer"/>
-	<field name="__detail_instrumento_id" class="java.lang.Integer"/>
+	<field name="p5_id" class="java.lang.Integer"/>
+	<field name="p5_singular" class="java.lang.String"/>
+	<field name="p5_has_responsavel" class="java.lang.Boolean"/>
+	<field name="p5_has_supervisor" class="java.lang.Boolean"/>
+	<field name="p5_has_equipe" class="java.lang.Boolean"/>
+	<field name="p5_menu" class="java.lang.String"/>
+	<field name="p5_descricao" class="java.lang.String"/>
+	<field name="p5_ordem" class="java.lang.Integer"/>
+	<field name="p5_programacao_id" class="java.lang.Integer"/>
+	<field name="p5_equipe" class="java.lang.String"/>
+	<field name="p5_responsavel" class="java.lang.String"/>
+	<field name="p5_supervisor" class="java.lang.String"/>
+	<field name="p5_responsavel_id" class="java.lang.Integer"/>
+	<field name="p5_supervisor_id" class="java.lang.Integer"/>
+	<field name="p5_instrumento_id" class="java.lang.Integer"/>
 	<group name="Legenda" isStartNewPage="true">
 		<groupExpression><![CDATA[$P{report_type}]]></groupExpression>
 		<groupHeader>
@@ -275,19 +276,19 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 			</band>
 		</groupHeader>
 	</group>
-	<group name="nivel">
-		<groupExpression><![CDATA[$F{p1_id}]]></groupExpression>
+	<group name="p4_nivel">
+		<groupExpression><![CDATA[$F{p4_id}]]></groupExpression>
 		<groupHeader>
 			<band height="48">
-				<printWhenExpression><![CDATA[$F{p1_id}!=null]]></printWhenExpression>
+				<printWhenExpression><![CDATA[$F{p4_id}!=null]]></printWhenExpression>
 				<frame>
-					<reportElement key="frame_grupo" style="grupo" mode="Transparent" x="0" y="0" width="555" height="46" backcolor="#F0F0F0" uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5"/>
+					<reportElement key="frame_grupo" style="grupo" mode="Opaque" x="0" y="0" width="555" height="46" backcolor="#F0F0F0" uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5"/>
 					<textField isStretchWithOverflow="true">
 						<reportElement style="Detail" positionType="Float" x="1" y="0" width="551" height="15" uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06"/>
 						<textElement>
 							<font size="10" isBold="true" isUnderline="false"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_singular} + " - " + $F{p1_menu}]]></textFieldExpression>
+						<textFieldExpression><![CDATA["acaoxpro - " + $F{p4_menu}]]></textFieldExpression>
 					</textField>
 					<textField isStretchWithOverflow="true">
 						<reportElement style="Detail" positionType="Float" x="0" y="30" width="550" height="12" uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7"/>
@@ -298,7 +299,7 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 +"@import url('https://fonts.googleapis.com/css?family=PT+Sans');"
 +"</style>"
 +"<style>span{baddig:0} body{font-size: 12pt !important; font-family: PT Sans, Arial !important;}</style><div style=\"line-height: 70%;padding:0\"><font size=1>" 
-+ $F{p1_descricao} != null ? "Descrição: " + $F{p1_descricao}.replaceAll("font-size","font-sizex") .replaceAll("helvetica","PT Sans").replaceAll("/ckimages", $P{APPLICATION_PATH} + "/../files_ckeditor"):""
++ $F{p4_descricao} != null ? "Descrição: " + $F{p4_descricao}.replaceAll("font-size","font-sizex") .replaceAll("helvetica","PT Sans").replaceAll("/ckimages", $P{APPLICATION_PATH} + "/../files_ckeditor"):""
  + "</font></div>"]]></textFieldExpression>
 					</textField>
 					<textField isStretchWithOverflow="true">
@@ -306,21 +307,21 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 						<textElement>
 							<font size="8"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_equipe} != null ? "Equipe: " + $F{p1_equipe} : ""]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$F{p4_equipe} != null ? "Equipe: " + $F{p4_equipe} : ""]]></textFieldExpression>
 					</textField>
 					<textField>
 						<reportElement style="Detail" positionType="Float" x="0" y="17" width="188" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_responsavel} != null ? "Responsável: " + $F{p1_responsavel} : ""]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$F{p4_responsavel} != null ? "Responsável: " + $F{p4_responsavel} : ""]]></textFieldExpression>
 					</textField>
 					<textField>
 						<reportElement style="Detail" positionType="Float" x="188" y="17" width="185" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_supervisor} != null ? "Supervisor: " + $F{p1_supervisor} : ""]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$F{p4_supervisor} != null ? "Supervisor: " + $F{p4_supervisor} : ""]]></textFieldExpression>
 					</textField>
 				</frame>
 			</band>
@@ -430,8 +431,8 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 					</jr:list>
 				</componentElement>
 				<textField>
-					<reportElement stretchType="RelativeToTallestObject" x="0" y="24" width="555" height="42" uuid="ceea1f45-b817-420c-9375-959cbad4633d"/>
-					<textElement textAlignment="Center" markup="html">
+					<reportElement x="0" y="24" width="555" height="42" uuid="ceea1f45-b817-420c-9375-959cbad4633d"/>
+					<textElement textAlignment="Center">
 						<font size="14" isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$P{report_title}]]></textFieldExpression>
@@ -475,7 +476,7 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 	</columnHeader>
 	<detail>
 		<band height="148" splitType="Stretch">
-			<printWhenExpression><![CDATA[$F{__detail_id} != null]]></printWhenExpression>
+			<printWhenExpression><![CDATA[$F{p5_id} != null]]></printWhenExpression>
 			<frame>
 				<reportElement stretchType="RelativeToBandHeight" mode="Opaque" x="0" y="4" width="555" height="144" uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5"/>
 				<box>
@@ -486,18 +487,18 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 					<textElement>
 						<font size="10" isBold="true"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{__detail_singular} + " - " + $F{__detail_menu}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["ttt - " + $F{p5_menu}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true">
 					<reportElement style="Detail" positionType="Float" x="0" y="27" width="555" height="12" uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7"/>
-					<textElement textAlignment="Justified" markup="html">
+					<textElement markup="html">
 						<font size="8"/>
 					</textElement>
 					<textFieldExpression><![CDATA["<style>" 
 +"@import url('https://fonts.googleapis.com/css?family=PT+Sans');"
 +"</style>"
 +"<style>span{baddig:0} body{font-size: 12pt !important; font-family: PT Sans, Arial !important;}</style><div style=\"line-height: 70%;padding:0\"><font size=1>" 
-+ $F{__detail_descricao} != null ? "Descrição: " + $F{__detail_descricao}.replaceAll("font-size","font-sizex") .replaceAll("helvetica","PT Sans"):""
++ $F{p5_descricao} != null ? "Descrição: " + $F{p5_descricao}.replaceAll("font-size","font-sizex") .replaceAll("helvetica","PT Sans"):""
  + "</font></div>"]]></textFieldExpression>
 				</textField>
 				<textField>
@@ -505,21 +506,21 @@ SELECT * FROM n5 order by p1_id,p2_id,p3_id]]>
 					<textElement>
 						<font size="8"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{__detail_equipe} != null ? "Equipe: " + $F{__detail_equipe} : ""]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{p5_equipe} != null ? "Equipe: " + $F{p5_equipe} : ""]]></textFieldExpression>
 				</textField>
 				<textField>
 					<reportElement style="Detail" positionType="Float" x="0" y="14" width="188" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 					<textElement>
 						<font size="8"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{__detail_responsavel} != null ? "Responsável: " + $F{__detail_responsavel} : ""]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{p5_responsavel} != null ? "Responsável: " + $F{p5_responsavel} : ""]]></textFieldExpression>
 				</textField>
 				<textField>
 					<reportElement style="Detail" positionType="Float" x="188" y="15" width="185" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 					<textElement>
 						<font size="8"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{__detail_supervisor} != null ? "Supervisor: " + $F{__detail_supervisor} : ""]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{p5_supervisor} != null ? "Supervisor: " + $F{p5_supervisor} : ""]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement style="Detail" positionType="Float" x="0" y="46" width="555" height="15" uuid="37953b06-7767-42cd-ae57-a3ad26b28da2">
